lookup tables and dropdowns gefixt

--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -56,7 +56,25 @@
         <div class="form-group row">
             <label for="role_id" class="col-sm-2 col-form-label">Role ID:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="role_id" name="role_id" value="{{ user.role_id }}" required>
+                <!-- <input type="text" class="form-control" id="role_id" name="role_id2" value="{{ user.role_id }}" required> -->
+                
+                    <!-- <input type="text" class="form-control" name="role_id2" required> -->
+                    <select class="form-control" id="role_id" name="role_id">
+                        {% for role in roles %}
+                         
+                            <option value="{{ role.role_id }}" 
+                                
+                                    {% if role.role_id == user.role_id %}
+                                        selected   
+                                    {% endif %}
+                                
+                               
+                            >
+                                {{ role.role }}
+                            </option>
+                        {% endfor %}
+                    </select>
+               
             </div>
         </div>
 
@@ -77,7 +95,7 @@
         <div class="form-group row">
             <label for="email" class="col-sm-2 col-form-label">Email:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="email" name="email" value="{{ user.email }}" required>
+                <input type="email" class="form-control" id="email" name="email" value="{{ user.email }}" required>
             </div>
         </div>
 
