--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -7,7 +7,12 @@
     <form method="post" action="{{ url_for('add_user') }}">
         <div class="form-group">
             <label for="role_id">Role ID:</label>
-            <input type="text" class="form-control" name="role_id" required>
+            <!-- <input type="text" class="form-control" name="role_id2" required> -->
+            <select class="form-control" id="role_id" name="role_id">
+                {% for role in roles %}
+                    <option value="{{ role.role_id }}">{{ role.role }}</option>
+                {% endfor %}
+            </select>
         </div>
 
         <div class="form-group">
@@ -22,7 +27,7 @@
 
         <div class="form-group">
             <label for="email">Email:</label>
-            <input type="text" class="form-control" name="email" required>
+            <input type="email" class="form-control" name="email" required>
         </div>
 
         <div class="form-group">
