--- a/templates/edit_report.html
+++ b/templates/edit_report.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <div class="container mt-3">
-    <form id="taskForm" method="post" action="{% if report %}/edit_report/{{ report.report_id }}{% else %}{{ url_for('add_report', user_id=user.user_id, reportBook_id=report_book.reportBook_id) }}{% endif %}">
+    <form id="taskForm" method="post" action="{% if report %}{{ url_for('edit_report', user_id=user.user_id, report_id=report.report_id) }} {% else %}{{ url_for('add_report', user_id=user.user_id, reportBook_id=report_book.reportBook_id) }}{% endif %}">
     <div class="d-flex justify-content-between align-items-center">
-        <button type="button" class="btn btn-primary" onclick="goBack()">Back</button>
+        <a class="btn btn-primary" href="{{ url_for('user_report_books', user_id=user.user_id) }}">Back</a>
         <h2 class="mb-0 text-center">eBerichstheft</h2>
         {% if user is defined %}
         <a class="btn btn-primary" href="{{ url_for('edit_user', user_id=user.user_id) }}">{{user.lastname}}</a>
@@ -14,7 +14,7 @@
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row mt-3">
           <div class="col-3">
           </div>
           <div class="col-6">
@@ -27,25 +27,48 @@
             {% endif %}
             </div>
           </div>
-          <div class="col-3">
-            <div class="d-flex flex-wrap">
+          <div {% if report %}class="col-3"{%else%}class="col-12"{% endif %}>
+            <div class="d-flex flex-wrap justify-content-end align-items-end">
                 {% if not onlyread %}<button id="save" type="submit" name="save_report" title="Speichern" class="btn btn-outline-primary mr-1">💾</button>{% endif %}
                
                 {% if onlyread %}
-                <a type="button" id="edit" title="Bearbeiten"class="btn btn-outline-primary" href="{{ url_for('edit_report', report_id=report.report_id) }}" title="Read">✏️</a> 
+                <a type="button" id="edit" title="Bearbeiten"class="btn btn-outline-primary" href="{{ url_for('edit_report', user_id=user.user_id, report_id=report.report_id) }}" title="Read">✏️</a> 
+              
                 {% endif %}
                 <button id="print" title="Ausdrucken" class="btn btn-outline-primary mr-1">🖨️</button>
             </div>
           </div>
         </div>
     </div>
+   
     <div class="container mt-3">
         <div class="row">
             <div class="col-md-6">
                 <!--<p>Name: Johnas Mücke</p>-->
                 <div class="form-group">
                     <label for="title">Status</label>
-                    <input type="text" class="form-control" id="title" type="number" name="status_id" value="{{ report.status_id if report else '' }}" {% if onlyread %}readonly{%else%}required{% endif %}>
+                    
+                    <select class="form-control" id="status_id" name="status_id">
+                        {% for status in statuses %}
+                        
+                            
+                            <option value="{{ status.status_id }}" 
+                                {%if report%}
+                                    {% if status.status_id == report.status_id %}
+                                        selected   
+                                    {% endif %}
+                                {%endif%}
+                                {% if onlyread %}
+                                    disabled
+                                {%else%}
+                                    required
+                                {% endif %}
+                            >
+                                {{ status.name }}
+                            </option>
+                            
+                        {% endfor %}
+                    </select>
                 </div>
           
             </div>
