--- a/templates/not used anymore_reports.html
+++ b/templates/not used anymore_reports.html
@@ -33,7 +33,7 @@
             <td>{{ report.thu }}</td>
             <td>{{ report.fri }}</td>
             <td>
-                <a href="{{ url_for('edit_report', report_id=report.report_id) }}">Edit</a>
+                <a href="{{ url_for('edit_report', user_id=user.user_id, report_id=report.report_id) }}">Edit</a>
                 <a href="{{ url_for('delete_report', report_id=report.report_id) }}">Delete</a>
             </td>
         </tr>
