--- a/templates/user_report_books.html
+++ b/templates/user_report_books.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container mt-3">
     <div class="d-flex justify-content-between align-items-center">
-       
+
         <a class="btn btn-primary" href="{{ url_for('users') }}">Back</a>
         <h2 class="mb-0 text-center">All Reports</h2>
         <!-- <a type="button" class="btn btn-primary" {% if username is defined %} href="/userpage" {% else %} href="/login"
@@ -14,9 +14,9 @@
             {% else %}
             Log in
             {% endif %}</a> -->
-            {% if user is defined %}
+        {% if user is defined %}
         <a class="btn btn-primary" href="{{ url_for('edit_user', user_id=user.user_id) }}">{{user.lastname}}</a>
-        {% else %} 
+        {% else %}
         <a class="btn btn-primary" href="/login">Login</a>
         {% endif %}
 
@@ -33,46 +33,64 @@
             class="btn btn-success btn-lg btn-block">+</a>
         <hr>
         {% for report in report_book.reports %}
-        <div class="card text-bg-light mb-3">
-            <div class="card-header">KW{{ report.report_id }}</td>
-            </div>
-            <div class="card-body">
-                <!-- Current status {{ report.status_id }} -->
-                <h5 class="card-title">{{ report.status_id }}</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a class="btn btn-outline-primary" href="{{ url_for('view_report', report_id=report.report_id) }}"
-                    title="Read">📖</a>
-                <a class="btn btn-outline-warning" href="{{ url_for('edit_report', report_id=report.report_id) }}"
-                    title="Edit">✏️</a>
-                <!-- <a class="btn btn-outline-danger" href="{{ url_for('delete_report', report_id=report.report_id) }}"
-                    title="Delete">❌</a> -->
-                <a class="btn btn-outline-danger" href="#" data-toggle="modal"
-                    data-target="#deleteModal{{ report.report_id }}" title="Delete">❌</a>
-                <!-- Modal for each report -->
-                <div class="modal fade" id="deleteModal{{ report.report_id }}" tabindex="-1" role="dialog"
-                    aria-labelledby="deleteModalLabel{{ report.report_id }}" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="deleteModalLabel{{ report.report_id }}">Confirm Delete</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                Achtung! Wollen Sie wircklich report KW{{report.report_id}} löschen?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Noch nicht</button>
-                                <a class="btn btn-danger"
-                                    href="{{ url_for('delete_report', report_id=report.report_id) }}">JA</a>
-                            </div>
-                        </div>
+        <div class="card    {% if report.status.name == 'New' %}border-info
+                            {% elif report.status.name == 'In Progress' %}bg-warning
+                            {% elif report.status.name == 'Declined' %}bg-danger
+                            {% elif report.status.name == 'Accepted' %}bg-success
+                            {% else  %}
+                            {% endif %} mb-3">
+            <div class="card-header">KW{{ report.report_id }}</div>
+            <div class="row no-gutters">
+                <!-- First column for information -->
+                <div class="col-md-10">
+
+                    <div class="card-body">
+                        <!-- <h5 class="card-title">{{ report.status_id }}</h5> -->
+                        {%if report.status.name%}
+                        <h5 class="card-title">{{ report.status.name }}</h5>
+                        {%else%}
+                        <h5 class="card-title" style="color: red;">no matches with lookup table</h5>
+                        {%endif%}
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+
+                <!-- Second column for buttons -->
+                <div class="col-md-2">
+                    <div class="d-flex flex-column">
+                        <a class="btn btn-outline-primary mb-1"
+                            href="{{ url_for('view_report', user_id=user.user_id, report_id=report.report_id) }}"
+                            title="Read">📖</a>
+                        <a class="btn btn-outline-warning mb-1"
+                            href="{{ url_for('edit_report', user_id=user.user_id, report_id=report.report_id) }}"
+                            title="Edit">✏️</a>
+                        <a class="btn btn-outline-danger" href="#" data-toggle="modal"
+                            data-target="#deleteModal{{ report.report_id }}" title="Delete">❌</a>
                     </div>
                 </div>
             </div>
-
+        </div>
+        <div class="modal fade" id="deleteModal{{ report.report_id }}" tabindex="-1" role="dialog"
+            aria-labelledby="deleteModalLabel{{ report.report_id }}" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteModalLabel{{ report.report_id }}">Confirm Delete</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Achtung! Wollen Sie wircklich report KW{{report.report_id}} löschen?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Noch nicht</button>
+                        <a class="btn btn-danger"
+                            href="{{ url_for('delete_report', report_id=report.report_id) }}">JA</a>
+                    </div>
+                </div>
+            </div>
         </div>
         {% endfor %}
 
@@ -93,8 +111,8 @@
                         KW{{ report.report_id }}</td>
                     <td>{{ report.status_id }}</td>
                     <td>
-                        <a href="{{ url_for('view_report', report_id=report.report_id) }}" title="Read">📖</a> 
-                        <a href="{{ url_for('edit_report', report_id=report.report_id) }}" title="Edit">♻️</a>
+                        <a href="{{ url_for('view_report', user_id=user.user_id, report_id=report.report_id) }}" title="Read">📖</a> 
+                        <a href="{{ url_for('edit_report', user_id=user.user_id, report_id=report.report_id) }}" title="Edit">♻️</a>
                         <a href="{{ url_for('delete_report', report_id=report.report_id) }}" title="Delete">❌</a>
                     </td>
                     
@@ -112,8 +130,9 @@
             Report Book</a>
         {% endfor %}
         {% else %}
-        <p style="color: red;" >No report books available for <b>{{user.surname}} {{user.lastname}}</b>  yet</p>
-        <a class="btn btn-success btn-lg login-btn" href="{{ url_for('add_report_book', user_id=user.user_id) }}">Add a Report Book?</a>
+        <p style="color: red;">No report books available for <b>{{user.surname}} {{user.lastname}}</b> yet</p>
+        <a class="btn btn-success btn-lg login-btn" href="{{ url_for('add_report_book', user_id=user.user_id) }}">Add a
+            Report Book?</a>
 
 
         {% endif %}
@@ -135,25 +154,25 @@
 
 
 
-<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete this item?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger">Yes, Delete</button>
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this item?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger">Yes, Delete</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 {% endblock %}
