--- a/templates/edit_report_book.html
+++ b/templates/edit_report_book.html
@@ -1,20 +1,47 @@
-<html lang="en">
-    <head>
-        <!-- ... (other head elements) -->
-    </head>
-    <body>
-        <h1>Edit Report Book for {{ user.surname }} {{ user.lastname }}</h1>
-    
-        <form method="post" action="{{ url_for('edit_report_book', user_id=user.user_id, reportBook_id=report_book.reportBook_id) }}">
+
+
+
+    {% extends 'index.html' %}
+
+{% block content %}
+<div class="d-flex justify-content-between align-items-center">
+       
+    <a class="btn btn-primary" href="{{ url_for('user_report_books', user_id=user.user_id) }}">Back</a>
+    <h2 class="mb-0 text-center">Edit eBerichtsheft </h2>
+    <!-- <a type="button" class="btn btn-primary" {% if username is defined %} href="/userpage" {% else %} href="/login"
+        {% endif %}>
+
+        {% if username is defined %}
+        {{ username }}
+        {% else %}
+        Log in
+        {% endif %}</a> -->
+        {% if user is defined %}
+        <a class="btn btn-primary" href="{{ url_for('edit_user', user_id=user.user_id) }}">{{user.lastname}}</a>
+        {% else %} 
+        <a class="btn btn-primary" href="/login">Login</a>
+        {% endif %}
+        
+
+
+</div>
+<div class="container mt-5">
+    <h1 class="mb-4">Add Report Book {{report_book.reportBook_id}} for {{ user.surname }} {{ user.lastname }}</h1>
+
+    <form method="post" action="{{ url_for('edit_report_book', user_id=user.user_id, reportBook_id=report_book.reportBook_id) }}">
+        <div class="form-group">
             <label for="start">Start Date:</label>
-            <input type="date" name="start" value="{{ report_book.start }}" required><br>
-    
+            <input type="date" class="form-control"value="{{ report_book.start }}"  name="start" required>
+        </div>
+
+        <div class="form-group">
             <label for="end">End Date:</label>
-            <input type="date" name="end" value="{{ report_book.end }}" required><br>
-    
-            <input type="submit" value="Update Report Book">
-        </form>
-    
-        <a href="{{ url_for('user_report_books', user_id=user.user_id) }}">Back to User Reports</a>
-    </body>
-    </html>
+            <input type="date" class="form-control" value="{{ report_book.end }}" name="end" required>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Update Report Book</button> 
+    </form>
+
+    <a href="{{ url_for('user_report_books', user_id=user.user_id) }}" class="btn btn-secondary mt-3">Cancel</a>
+</div>
+    {% endblock %}
