--- a/templates/users.html
+++ b/templates/users.html
@@ -18,7 +18,7 @@
      
              
 
-                    <a class="btn btn-outline-primary mr-1" href="{{ url_for('user_report_books', user_id=user.user_id) }}">View my report book</a> 
+                    <a class="btn btn-outline-primary mr-1" href="{{ url_for('user_report_books', user_id=user.user_id) }}">View report book</a> 
                     <a class="btn btn-outline-warning mr-1" href="{{ url_for('edit_user', user_id=user.user_id) }}">Edit personal data</a>
                     <a class="btn btn-outline-danger mr-1" href="{{ url_for('delete_user', user_id=user.user_id) }}">Delete my account</a>
                   
