--- a/templates/index.html
+++ b/templates/index.html
@@ -81,22 +81,22 @@
     </style>
 </head>
 <body>
-
+<!-- 
     <div class="container mt-5">
         <nav>
             <ul class="nav nav-tabs">
-                <!-- Ich habe das nur für testing benutzt -->
+                Ich habe das nur für testing benutzt
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="/login">Read me</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Login</a>
-                </li> -->
+                </li> 
                 
             </ul>
         </nav>
-    </div>
-    <h1 class="text-center" >eBerichstheft</h1>
+    </div> -->
+    <!-- <h1 class="text-center" >eBerichstheft</h1> -->
     <div class="iphone-frame mt-5">
        
         
