--- a/templates/edit_report_book.html
+++ b/templates/edit_report_book.html
@@ -26,7 +26,7 @@
 
 </div>
 <div class="container mt-5">
-    <h1 class="mb-4">Add Report Book {{report_book.reportBook_id}} for {{ user.surname }} {{ user.lastname }}</h1>
+    <h1 class="mb-4">Edit Report Book {{report_book.reportBook_id}} for {{ user.surname }} {{ user.lastname }}</h1>
 
     <form method="post" action="{{ url_for('edit_report_book', user_id=user.user_id, reportBook_id=report_book.reportBook_id) }}">
         <div class="form-group">
